--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -8,8 +8,8 @@
     <ul id="menu1">
         <li><a href="#">Menu 1</a>
             <ul>
-                <li><a href="#">Level 1.1</a></li>
-                <li><a href="#">Level 1.2</a></li>
+                <li><a href="../Pages/TreeView1.aspx">Level 1.1</a></li>
+                <li><a href="../Pages/Radiobuttons.aspx">Level 1.2</a></li>
                 <li><a href="#">Level 1.3</a></li>
             </ul>
         </li>
