Reorganisation des ressources du projet + ajout d'un deuxieme exemple de radiobutton

--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Menu #1</title>
-    <link rel="stylesheet" href="../CSS/Menu1.css" />
+    <link rel="stylesheet" href="../Resources/CSS/Menu1.css" />
 </head>
 <body>
     <ul id="menu1">
