Ajout page Login.aspx (front end)

--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -8,9 +8,10 @@
     <ul id="menu1">
         <li><a href="#">Menu 1</a>
             <ul>
-                <li><a href="../Pages/TreeView1.aspx">Level 1.1</a></li>
-                <li><a href="../Pages/Radiobuttons.aspx">Level 1.2</a></li>
-                <li><a href="#">Level 1.3</a></li>
+                <li><a href="../Pages/TreeView1.aspx">Treeview</a></li>
+                <li><a href="../Pages/Radiobuttons.aspx">RadioButton</a></li>
+                <li><a href="../Pages/Checkbox.aspx">Checkbox</a></li>
+                <li><a href="../Pages/Login.aspx">Login</a></li>
             </ul>
         </li>
         <li><a href="#">Menu 2</a>
