Gallery: ajout responsive design

--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -12,6 +12,7 @@
                 <li><a href="../Pages/Radiobuttons.aspx">RadioButton</a></li>
                 <li><a href="../Pages/Checkbox.aspx">Checkbox</a></li>
                 <li><a href="../Pages/Login.aspx">Login</a></li>
+                <li><a href="../Pages/Gallery.aspx">Gallery</a></li>
             </ul>
         </li>
         <li><a href="#">Menu 2</a>
