--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -12,7 +12,8 @@
                 <li><a href="../Pages/Radiobuttons.aspx">RadioButton</a></li>
                 <li><a href="../Pages/Checkbox.aspx">Checkbox</a></li>
                 <li><a href="../Pages/Login.aspx">Login</a></li>
-                <li><a href="../Pages/Gallery.aspx">Gallery</a></li>
+                <li><a href="../Pages/Gallery.aspx">Responsive Gallery</a></li>
+                <li><a href="../Pages/SliderGallery.aspx">Slider Gallery</a></li>
             </ul>
         </li>
         <li><a href="#">Menu 2</a>
