Ajout CSS pour SlideGallery

--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -12,7 +12,7 @@
                 <li><a href="../Pages/Radiobuttons.aspx">RadioButton</a></li>
                 <li><a href="../Pages/Checkbox.aspx">Checkbox</a></li>
                 <li><a href="../Pages/Login.aspx">Login</a></li>
-                <li><a href="../Pages/Gallery.aspx">Responsive Gallery</a></li>
+                <li><a href="../Pages/ResponsiveGallery.aspx">Responsive Gallery</a></li>
                 <li><a href="../Pages/SliderGallery.aspx">Slider Gallery</a></li>
             </ul>
         </li>
