--- a/MenuExemples/Pages/Menu1.html
+++ b/MenuExemples/Pages/Menu1.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <ul id="menu1">
-        <li><a href="#">Menu 1</a>
+        <li>
+            <a href="#">Menu 1</a>
             <ul>
                 <li><a href="../Pages/TreeView1.aspx">Treeview</a></li>
                 <li><a href="../Pages/Radiobuttons.aspx">RadioButton</a></li>
@@ -14,15 +15,18 @@
                 <li><a href="../Pages/Login.aspx">Login</a></li>
                 <li><a href="../Pages/ResponsiveGallery.aspx">Responsive Gallery</a></li>
                 <li><a href="../Pages/SliderGallery.aspx">Slider Gallery</a></li>
+                <li><a href="../Pages/StaticFloatingMenu.aspx">Static Floating Menu</a></li>
             </ul>
         </li>
-        <li><a href="#">Menu 2</a>
+        <li>
+            <a href="#">Menu 2</a>
             <ul>
                 <li><a href="#">Level 2.1</a></li>
                 <li><a href="#">Level 2.2</a></li>
             </ul>
         </li>
-        <li><a href="#">Menu 3</a>
+        <li>
+            <a href="#">Menu 3</a>
             <ul>
                 <li><a href="#">Level 3.1</a></li>
                 <li><a href="#">Level 3.2</a></li>
